fixing alignment of item desc in main menu

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1111,6 +1111,10 @@ code{
 				> a{
 					padding-bottom: 18px;
 					padding-top: 18px;
+					&.item-desc{
+						margin-bottom: 15px;
+						margin-top: 15px;
+					}
 				}
 				&:last-child{
 					> a{
